--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu Web - El Rincón De Jorgito </title>
-    <meta name="description" content="❤️ Designed and developed by Angel Nerozzi ❤️" />
+    <meta name="description" content="❤️ Designed and developed by B.S. in CS - Angel Nerozzi ❤️" />
     <meta name="author" content="Angel Nerozzi" />
     <meta property="og:image" content="/og-image.png" />
   </head>
